zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__toggle_floating_panes_on_sends_tty_csi_event.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 2701
expression: "format!(\"{:?}\", * tty_stdin_bytes.lock().unwrap())"
---
{1: [27, 91, 79], 3: [27, 91, 73]}
