zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__when_swapping_floating_layouts_in_an_undamaged_state_pane_focuses_on_focused_node.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 8192
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
01 (C): │                                                                                                                       │
02 (C): │                                                                                                                       │
03 (C): │                                                                                                                       │
04 (C): │                                                                                                                       │
05 (C): │                             ┌ Pane #4 ──────────────────────────────────────── PIN [ ] ┐                              │
06 (C): │                             │                                                          │                              │
07 (C): │                             │                                                          │ ┐                            │
08 (C): │                             │                                                          │ │                            │
09 (C): │                             │                                                          │ │ ┐                          │
10 (C): │                             │                                                          │ │ │                          │
11 (C): │                             │                                                          │ │ │                          │
12 (C): │                             │                                                          │ │ │                          │
13 (C): │                             │                                                          │ │ │                          │
14 (C): │                             └──────────────────────────────────────────────────────────┘ │ │                          │
15 (C): │                               │                                                          │ │                          │
16 (C): │                               └──────────────────────────────────────────────────────────┘ │                          │
17 (C): │                                 │                                                          │                          │
18 (C): │                                 └──────────────────────────────────────────────────────────┘                          │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

